# OmniEraser

./: .gitignore  README.md  pyproject.toml
src/omnieraser/api/: run.py
src/omnieraser/models/: __init__.py
src/omnieraser/models/controlnets/: __init__.py  controlnet_flux.py
src/omnieraser/models/transformers/: __init__.py
src/omnieraser/pipelines/: __init__.py
src/omnieraser/pipelines/flux/: __init__.py  pipeline_flux_control_removal.py  pipeline_flux_controlnet_removal.py
tests/: conftest.py
tests/api/: api_test.py
tests/pipelines/: conftest.py  pipeline_flux_control_removal_test.py  pipeline_flux_controlnet_removal_test.py
