[project]
name = "omnieraser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shunsuke KITADA", email = "shunsuke.kitada.0831@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "diffusers[torch]==0.30.2",
    "peft>=0.17.1",
    "protobuf>=6.33.0",
    "sentencepiece>=0.2.1",
    "transformers[torch]>=4.30.0",
]

[project.optional-dependencies]
example = [
    "opencv-python>=4.12.0.88",
]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "pytest>=6.0.0",
    "ruff>=0.1.5",
]
